@@ -17,11 +17,8 @@ import com.elster.jupiter.pki.RevokeStatus;
 import com.elster.jupiter.pki.SecurityManagementService;
 import com.elster.jupiter.pki.TrustStore;
 import com.elster.jupiter.pki.TrustedCertificate;
-
-import org.apache.commons.lang3.StringUtils;
-
 import com.elster.jupiter.rest.util.IdWithNameInfo;
-
+import org.apache.commons.lang3.StringUtils;
 import org.bouncycastle.asn1.x500.RDN;
 import org.bouncycastle.asn1.x500.X500Name;
 import org.bouncycastle.asn1.x500.style.BCStyle;
@@ -63,7 +60,6 @@ import java.security.KeyManagementException;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
-import java.security.NoSuchProviderException;
 import java.security.PrivateKey;
 import java.security.Security;
 import java.security.UnrecoverableKeyException;
@@ -80,8 +76,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
-import static org.bouncycastle.jce.provider.BouncyCastleProvider.PROVIDER_NAME;
-
 @Component(name = "CaService", service = {CaService.class}, property = "name=" + CaService.COMPONENTNAME, immediate = true)
 public class CaServiceImpl implements CaService {
     private static final Logger LOGGER = Logger.getLogger(CaServiceImpl.class.getName());
@@ -94,9 +88,6 @@ public class CaServiceImpl implements CaService {
     private static final String PKI_CXO_TRUSTSTORE_PROPERTY = "com.elster.jupiter.ca.truststore";
     private static final String PKI_SUPER_ADMIN_CLIENT_ALIAS_PROPERTY = "com.elster.jupiter.ca.certificate"; // this is the client authentication certificate (key-store entry)
     private static final String PKI_MANAGEMENT_CLIENT_ALIAS_PROPERTY = "com.elster.jupiter.ca.clientcertificate"; // this is the trust-store entry, contains client's CA entry
-    private static final String PKI_CA_NAME_PROPERTY = "com.elster.jupiter.ca.name";
-    private static final String PKI_CERTIFICATE_PROFILE_NAME_PROPERTY = "com.elster.jupiter.ca.certprofilename";
-    private static final String PKI_END_ENTITY_PROFILE_NAME_PROPERTY = "com.elster.jupiter.ca.eeprofilename";
 
     // from Constants Required for EJBCA-WS
     public static final String RESPONSETYPE_CERTIFICATE = "CERTIFICATE";
@@ -119,9 +110,6 @@ public class CaServiceImpl implements CaService {
     private String pkiTrustStore;
     private String pkiSuperAdminClientAlias;
     private String pkiManagementClientAlias;
-    private String pkiCaName;
-    private String pkiCertificateProfileName;
-    private String pkiEndEntityProfileName;
 
     private volatile SecurityManagementService securityManagementService;
     private volatile Thesaurus thesaurus;
@@ -165,9 +153,6 @@ public class CaServiceImpl implements CaService {
         pkiTrustStore = null;
         pkiSuperAdminClientAlias = null;
         pkiManagementClientAlias = null;
-        pkiCaName = null;
-        pkiCertificateProfileName = null;
-        pkiEndEntityProfileName = null;
         ejbcaWS = null;
         configured = false;
     }
@@ -179,17 +164,11 @@ public class CaServiceImpl implements CaService {
         pkiTrustStore = bundleContext.getProperty(PKI_CXO_TRUSTSTORE_PROPERTY);
         pkiSuperAdminClientAlias = bundleContext.getProperty(PKI_SUPER_ADMIN_CLIENT_ALIAS_PROPERTY);
         pkiManagementClientAlias = bundleContext.getProperty(PKI_MANAGEMENT_CLIENT_ALIAS_PROPERTY);
-        pkiCaName = bundleContext.getProperty(PKI_CA_NAME_PROPERTY);
-        pkiCertificateProfileName = bundleContext.getProperty(PKI_CERTIFICATE_PROFILE_NAME_PROPERTY);
-        pkiEndEntityProfileName = bundleContext.getProperty(PKI_END_ENTITY_PROFILE_NAME_PROPERTY);
 
         configured = pkiPort != null
                 && StringUtils.isNotBlank(pkiHost)
                 && StringUtils.isNotBlank(pkiTrustStore)
-                && StringUtils.isNotBlank(pkiSuperAdminClientAlias)
-                && StringUtils.isNotBlank(pkiCaName)
-                && StringUtils.isNotBlank(pkiCertificateProfileName)
-                && StringUtils.isNotBlank(pkiEndEntityProfileName);
+                && StringUtils.isNotBlank(pkiSuperAdminClientAlias);
 
         if (!configured) {
             LOGGER.info("CA service started in offline mode. Any service usages will be rejected until all properties are specified.");
@@ -210,15 +189,15 @@ public class CaServiceImpl implements CaService {
         CertificateResponse certificateResponse;
         UserDataVOWS userData = new UserDataVOWS();
 
-        String caName = (certificateUserData.isPresent()) ? certificateUserData.get().getCaName() : pkiCaName;
+        String caName = (certificateUserData.isPresent()) ? certificateUserData.get().getCaName() : "";
         LOGGER.info("- CA name: " + caName);
         userData.setCaName(caName);
 
-        String endEntity = (certificateUserData.isPresent()) ? certificateUserData.get().getEndEntityName() : pkiEndEntityProfileName;
+        String endEntity = (certificateUserData.isPresent()) ? certificateUserData.get().getEndEntityName() : "";
         LOGGER.info("- EndEntity: " + endEntity);
         userData.setEndEntityProfileName(endEntity);
 
-        String certificateProfile = (certificateUserData.isPresent()) ? certificateUserData.get().getCertificateProfileName() : pkiCertificateProfileName;
+        String certificateProfile = (certificateUserData.isPresent()) ? certificateUserData.get().getCertificateProfileName() : "";
         LOGGER.info("- CertificateProfile: " + certificateProfile);
         userData.setCertificateProfileName(certificateProfile);
 
@@ -238,16 +217,28 @@ public class CaServiceImpl implements CaService {
 
             certificateResponse = ejbcaWS.certificateRequest(userData, csrEncoded, CERT_REQ_TYPE_PKCS10, null, RESPONSETYPE_CERTIFICATE);
 
-            LOGGER.info("Response received, parsing as X.509 certificate");
-            InputStream byteArrayInputStream = new ByteArrayInputStream(org.bouncycastle.util.encoders.Base64.decode(certificateResponse.getData()));
-            CertificateFactory certificateFactory = CertificateFactory.getInstance(X509, PROVIDER_NAME);
+            LOGGER.info("Response received");
+            LOGGER.info("\t- responseType: " + certificateResponse.getResponseType());
+            if (certificateResponse.getResponseType()!= null &&
+                    certificateResponse.getResponseType().equals(RESPONSETYPE_CERTIFICATE)) {
+                LOGGER.info("\t- response:\n" + new String(certificateResponse.getData()) + "\n");
+            } else {
+                LOGGER.info("\t- responseData:\n" + javax.xml.bind.DatatypeConverter.printHexBinary(certificateResponse.getData()) +"\n" );
+
+            }
+
+            LOGGER.info("Parsing as X.509 certificate");
+            //using MimeDecoder because the response data is Base64 with line breaks
+            byte[] decodedCertificate = Base64.getMimeDecoder().decode(certificateResponse.getData());
+            InputStream byteArrayInputStream = new ByteArrayInputStream(decodedCertificate);
+            CertificateFactory certificateFactory = CertificateFactory.getInstance(X509);
             x509Cert = (X509Certificate) certificateFactory.generateCertificate(byteArrayInputStream);
 
-            String certEncoded = new String(Base64.getEncoder().encode(x509Cert.getEncoded()));
-            LOGGER.info("Received certificate\n" + BEGIN_CERTIFICATE + certEncoded + END_CERTIFICATE);
+            String certEncoded  = new String(Base64.getEncoder().encode(x509Cert.getEncoded()));
+            LOGGER.info("Final certificate:\n"+ BEGIN_CERTIFICATE +certEncoded+ END_CERTIFICATE);
 
         } catch (ApprovalException_Exception | AuthorizationDeniedException_Exception | EjbcaException_Exception | NotFoundException_Exception |
-                UserDoesntFullfillEndEntityProfile_Exception | WaitingForApprovalException_Exception | IOException | CertificateException | NoSuchProviderException e) {
+                UserDoesntFullfillEndEntityProfile_Exception | WaitingForApprovalException_Exception | IOException | CertificateException e) {
             LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
@@ -263,6 +254,7 @@ public class CaServiceImpl implements CaService {
         try {
             ejbcaWS.revokeCert(certificateTemplate.getIssuerDN(), certificateTemplate.getSerialNumber().toString(SN_HEX), reason);
         } catch (AlreadyRevokedException_Exception | ApprovalException_Exception | AuthorizationDeniedException_Exception | CADoesntExistsException_Exception | EjbcaException_Exception | NotFoundException_Exception | WaitingForApprovalException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -274,6 +266,7 @@ public class CaServiceImpl implements CaService {
         try {
             rs = ejbcaWS.checkRevokationStatus(searchFilter.getIssuerDN(), searchFilter.getSerialNumber().toString(SN_HEX));
         } catch (AuthorizationDeniedException_Exception | CADoesntExistsException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
         return RevokeStatus.fromValue(rs.getReason()).orElseThrow(() -> new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR));
@@ -297,6 +290,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAvailableCAs().stream().map(NameAndId::getName).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -306,6 +300,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAuthorizedEndEntityProfiles().stream().map(f -> new IdWithNameInfo(f.getId(), f.getName())).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -315,6 +310,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAvailableCAsInProfile(endEntityId).stream().map(f -> new IdWithNameInfo(f.getId(), f.getName())).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -324,6 +320,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAvailableCertificateProfiles(endEntityId).stream().map(f -> new IdWithNameInfo(f.getId(), f.getName())).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -332,10 +329,10 @@ public class CaServiceImpl implements CaService {
     public String getPkiInfo() {
         checkConfiguration();
         StringBuilder result = new StringBuilder();
-        result.append("Version: ");
-        String version = ejbcaWS.getEjbcaVersion();
-        result.append(version).append('\n');
         try {
+            result.append("Version: ");
+            String version = ejbcaWS.getEjbcaVersion();
+            result.append(version).append('\n');
             Map<Integer, String> authorizedEEProfiles = ejbcaWS.getAuthorizedEndEntityProfiles().stream()
                     .collect(Collectors.toMap(NameAndId::getId, NameAndId::getName));
             for (Map.Entry<Integer, String> authorizedEEProfilesEntry : authorizedEEProfiles.entrySet()) {
@@ -349,6 +346,7 @@ public class CaServiceImpl implements CaService {
                         .append("CPs in profile: ").append(cpInProfile).append('\n');
             }
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.INVALID_REVOCATION_REASON, e.getLocalizedMessage());
         }
         return result.toString();
@@ -360,6 +358,7 @@ public class CaServiceImpl implements CaService {
             crlBytes = ejbcaWS.getLatestCRL(caName, isDelta);
             return Optional.ofNullable(null != crlBytes ? getX509CRL(crlBytes) : null);
         } catch (CADoesntExistsException_Exception | EjbcaException_Exception | CertificateException | CRLException e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -467,12 +466,12 @@ public class CaServiceImpl implements CaService {
     private EjbcaWS createWSBackend() {
         EjbcaWSService service;
         setNewDefaultSSLSocketFactory();
-        //CryptoProviderTools.installBCProvider();
         QName Q_NAME = new QName("http://ws.protocol.core.ejbca.org/", "EjbcaWSService");
         String WSDL_LOCATION = "https://" + pkiHost.trim() + ':' + pkiPort + "/ejbca/ejbcaws/ejbcaws?wsdl";
         try {
             service = new EjbcaWSService(new URL(WSDL_LOCATION), Q_NAME);
         } catch (MalformedURLException e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
         return service.getEjbcaWSPort();
